# BlackBoxViewer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  blackboxmodel.cpp  blackboxmodel.h  blackboxviewer_global.h  contextpool.cpp  contextpool.h
src/bbmodel/: CMakeLists.txt  blackboxmodel.cpp  blackboxmodel.h  blackboxviewer_global.h  cannamesfinder.cpp  cannamesfinder.h  contextpool.cpp  contextpool.h  qmltypes.qrc
src/bbmodel/qml/BlackBoxView/: BBGroup.qml  BBView.qml  NameInput.qml  qmldir
tests/: CMakeLists.txt  main.cpp
tests/qml/: main.qml
